# avdan-os-dock

./: .list.txt.kate-swp  AppItem.qml  CMakeLists.txt  Dock.qml  DockItem.qml  MainDock.qml  NotificationDock.qml  PKGBUILD  RightMenu.qml  SystemDock.qml  TaskBar.qml  applicationitem.cpp  applicationitem.h  applicationmodel.cpp  applicationmodel.h  appmodel.cpp  appmodel.h  dockwindow.cpp  dockwindow.h  hamburgermenu.cpp  hamburgermenu.h  main.cpp  main.qml  processprovider.cpp  processprovider.h  qml.qrc  systemappitem.cpp  systemappitem.h  systemappmonitor.cpp  systemappmonitor.h  tooltip.cpp  tooltip.h  utils.cpp  utils.h  xwindowinterface.cpp  xwindowinterface.h
